# OpenRecon-Pro

./: .bandit  .env.example  .gitignore  CHANGELOG-PR1.md  Dockerfile  Jenkinsfile  README.md  app.py  cli.py  dockerignore  gui.py  pyproject.toml  recon.py  requirements.txt
ansible/: setup_env.ymlsetup_env.yml  site.yml
core/: engine.py  init.py
frontend/: package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.js
frontend/src/: app.css  app.html
frontend/src/lib/: api.js  markdown.js  stores.js
frontend/src/lib/components/: AIReport.svelte  ConsoleLog.svelte  DownloadPanel.svelte  ParentDomainTool.svelte  ResultsPanel.svelte  ScanPanel.svelte  StatsBar.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
modules/: contact.py  email.py  init.py  prompts.py  report.py  search.py  whois_lookup.py
modules/detection/: headers.py  tech.py  waf_cdn.py  wildcard.py
modules/subdomain/: deep_scan.py  parent_lookup.py  resolver.py  sources.py
templates/: index.html
terraform/: main.tf
tests/: test_basic.py
utils/: __init__.py  config.py  logger.py
